// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Special bet API GET /bets/serie should return list of special-bets 1`] = `
Array [
  Object {
    "testdata": "shared",
  },
]
`;

exports[`Special bet API GET /bets/serie/1 should return 200 when user is in db 1`] = `
Object {
  "testData": "shared",
}
`;

exports[`Special bet API POST /bets/serie should return 200 1`] = `
Object {
  "key": "test_key",
}
`;

exports[`Special bet API PUT /bets/serie should return 200 and creates new user if does not exist already 1`] = `
Object {
  "key": "random_key",
}
`;

exports[`Special bet API PUT /bets/serie should return 204 1`] = `Object {}`;
